--- a/3D modeling.html
+++ b/3D modeling.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="portfolio Henrique Barbosa">
     <title>portfolio</title>
-    <link rel="stylesheet" type="text/css" href="portfolio.css">
+    <link rel="stylesheet" type="text/css" href="3D modeling.css">
 </head>
 
 <body>
