--- a/landingpage.html
+++ b/landingpage.html
@@ -11,9 +11,10 @@
     <header class="cabeçalho">
         <img class="cabeçalho-imagem" src="0012.jpg" alt="logo portfolio">
         <nav class="cabeçalho-menu">
-            <a class="cabeçalho-menu-item" href="sobremim.html">Sobre mim </a>
+            <a class="cabeçalho-menu-item" href="livecode.html"> Live Code</a> 
             <a class="cabeçalho-menu-item" href="3D modeling.html">3D modeling </a>
-            <a class="cabeçalho-menu-item" href="contato.html">Contato </a>    
+            <a class="cabeçalho-menu-item" href="sobremim.html">Sobre mim </a>
+            <a class="cabeçalho-menu-item" href="contato.html">Contato </a>  
         </nav>
     </header>
     
