--- a/3D modeling.html
+++ b/3D modeling.html
@@ -13,6 +13,8 @@
         <img class="cabeçalho-imagem" src="0012.jpg" href="landingpage.html" alt="logo portfolio">
         <nav class="cabeçalho-menu">
             <a class="cabeçalho-menu-item" href="landingpage.html">Home </a>
+            <a class="cabeçalho-menu-item" href="livecode.html"> Live Code</a>
+            <a class="cabeçalho-menu-item" href="exemplos.html"> Exemplos</a> 
             <a class="cabeçalho-menu-item" href="sobremim.html">Sobre mim </a>
             <a class="cabeçalho-menu-item" href="contato.html">Contato </a>    
         </nav>
@@ -31,9 +33,6 @@
                 <iframe class="imagem02"src='https://my.spline.design/componentkeyboardcopy-96da114ea2f8c656786c55f132cf8351/' frameborder='0' width='400px' height='400px'></iframe>
                 <iframe src='https://my.spline.design/wizardroomcopy-cf15a69734a98cd6c415b27ceb45221b/' frameborder='0' width='400px' height='400px'></iframe>
             </div>
-            <footer class="rodape">
-                <img class="rodape-imagem" src="logobaixo.jpg" alt="logosite">
-            </footer>
-            
+
         </section>
 </body>
