--- a/livecode.html
+++ b/livecode.html
@@ -13,6 +13,8 @@
         <img class="cabeçalho-imagem" src="0012.jpg" href="landingpage.html" alt="logo portfolio">
         <nav class="cabeçalho-menu">
             <a class="cabeçalho-menu-item" href="landingpage.html">Home </a>
+            <a class="cabeçalho-menu-item" href="exemplos.html"> Exemplos</a> 
+            <a class="cabeçalho-menu-item" href="3D modeling.html">3D modeling </a>
             <a class="cabeçalho-menu-item" href="sobremim.html">Sobre mim </a>
             <a class="cabeçalho-menu-item" href="contato.html">Contato </a>    
         </nav>
