--- a/landingpage.html
+++ b/landingpage.html
@@ -12,6 +12,7 @@
         <img class="cabeçalho-imagem" src="0012.jpg" alt="logo portfolio">
         <nav class="cabeçalho-menu">
             <a class="cabeçalho-menu-item" href="livecode.html"> Live Code</a> 
+            <a class="cabeçalho-menu-item" href="exemplos.html"> Exemplos</a> 
             <a class="cabeçalho-menu-item" href="3D modeling.html">3D modeling </a>
             <a class="cabeçalho-menu-item" href="sobremim.html">Sobre mim </a>
             <a class="cabeçalho-menu-item" href="contato.html">Contato </a>  
