--- a/sobremim.html
+++ b/sobremim.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="portfolio Henrique Barbosa">
-    <title>sobre mim</title>
-    <link rel="stylesheet" type="text/css" href="sobremim.css">
+    <title>portfolio</title>
+    <link rel="stylesheet" type="text/css" href="3D modeling.css">
 </head>
+
+<body>
+    <header class="cabeçalho">
+        <img class="cabeçalho-imagem" src="0012.jpg" href="landingpage.html" alt="logo portfolio">
+        <nav class="cabeçalho-menu">
+            <a class="cabeçalho-menu-item" href="landingpage.html">Home </a>
+            <a class="cabeçalho-menu-item" href="livecode.html"> Live Code</a>
+            <a class="cabeçalho-menu-item" href="exemplos.html">Exemplos </a>
+            <a class="cabeçalho-menu-item" href="3D modeling.html">3D modeling </a>
+            <a class="cabeçalho-menu-item" href="contato.html">Contato </a>    
+        </nav>
+    </header>
