button and new page

--- a/exemplos.html
+++ b/exemplos.html
@@ -22,7 +22,7 @@
 
     <div class="contaier">
         <div class="projeto1">
-            <label> <b>LIVE CODE</b> <button> <b>TESTE AQUI</b> </button></label>
+            <label> <b>LIVE CODE</b> <a class="button" a href="livecodetab.html" target="_blank" > <b>TESTE AQUI</b> </a></label>
                 <pre>
                     <code>
                         HTML + JS
@@ -115,7 +115,7 @@
                 </pre>
         </div>
         <div class="projeto2">    
-            <label> <b>projeto2</b> <button> <b>TESTE AQUI</b> </button></label>
+            <label> <b>PROJETO 2</b> <a class="button" a href="livecode.html" target="_blank" > <b>TESTE AQUI</b> </a></label>
             <pre>
                 <code>
 
@@ -123,7 +123,7 @@
             </pre>
         </div>
         <div class="projeto3">
-            <label><b>projeto3</b> <button> <b>TESTE AQUI</b> </button></label>
+            <label> <b>PROJETO 3</b> <a class="button" a href="livecode.html" target="_blank" > <b>TESTE AQUI</b> </a></label>
             <pre>
                 <code>
 
