--- a/exemplos.html
+++ b/exemplos.html
@@ -20,12 +20,13 @@
         </nav>
     </header>
 
-    <div class="contaier">
+    <div class="container">
         <div class="projeto1">
             <label> <b>LIVE CODE</b> <a class="button" a href="livecodetab.html" target="_blank" > <b>TESTE AQUI</b> </a></label>
                 <pre>
                     <code>
-                        HTML + JS
+                        <b style="color: yellow;">HTML + JS</b>
+                        
     div class="container" 
         div class="left"
              label i class="fa-brands fa-html5" /i HTML label
@@ -56,7 +57,8 @@
         }
     script
                            
-                                        CSS
+                                       <b style="color: rgb(0, 174, 255);"> CSS </b>
+
  @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap');
 
 
