--- a/3D modeling.html
+++ b/3D modeling.html
@@ -6,6 +6,7 @@
     <meta name="description" content="portfolio Henrique Barbosa">
     <title>portfolio</title>
     <link rel="stylesheet" type="text/css" href="3D modeling.css">
+    <link rel="icon" type="image/x-icon" href="0012.jpg">
 </head>
 
 <body>
