--- a/landingpage.html
+++ b/landingpage.html
@@ -6,6 +6,7 @@
     <meta name="description" content="portfolio Henrique Barbosa">
     <title>portfolio</title>
     <link rel="stylesheet" type="text/css" href="landingpage.css">
+    <link rel="icon" type="image/x-icon" href="0012.jpg">
 </head>
 <body>
     <header class="cabeçalho">
