--- a/livecodetab.html
+++ b/livecodetab.html
@@ -6,6 +6,7 @@
     <meta name="description" content="portfolio Henrique Barbosa">
     <title>portfolio</title>
     <link rel="stylesheet" type="text/css" href="livecode.css">
+    <link rel="icon" type="image/x-icon" href="0012.jpg">
     <script src="https://kit.fontawesome.com/13c3bd5081.js" crossorigin="anonymous"></script>
 </head>
 <body>
